fix jumping footer

--- a/client/src/components/Footer/style.scss
+++ b/client/src/components/Footer/style.scss
@@ -10,5 +10,6 @@
   bottom: 0;
   left: 0;
   flex-wrap: wrap;
+  width: 100vw;
   height: 50px;
 }
